Fix modern light mode contrast

--- a/public/assets/css/home-modern.css
+++ b/public/assets/css/home-modern.css
@@ -1733,15 +1733,17 @@ body.ish-home-modern.ish-modern-light footer .up-footer .tags-widget ul.tags-lis
 
 body.ish-home-modern.ish-modern-light footer .up-footer .footer-widget ul.social-icons li a,
 body.ish-home-modern.ish-modern-light footer .down-footer a.go-top {
-  color: #fffaf0;
-  background: #2f2a22;
-  border-color: #2f2a22;
+  color: #111827 !important;
+  background: #f8f0e3 !important;
+  border-color: #c7b391 !important;
+  box-shadow: inset 0 0 0 1px rgba(255, 250, 240, 0.72), 0 8px 18px rgba(31, 36, 48, 0.08);
 }
 
 body.ish-home-modern.ish-modern-light footer .up-footer .footer-widget ul.social-icons li a:hover,
 body.ish-home-modern.ish-modern-light footer .down-footer a.go-top:hover {
-  background: #4a3f31;
-  border-color: #4a3f31;
+  color: #000000 !important;
+  background: #eadfcd !important;
+  border-color: #9f8f73 !important;
 }
 
 body.ish-home-modern.ish-modern-light footer .down-footer ul.list-footer li a {
